src/test/ui/type-alias-impl-trait/issue-63279.stderr
error[E0271]: type mismatch resolving `<[closure@$DIR/issue-63279.rs:8:5: 8:28] as FnOnce<()>>::Output == ()`
  --> $DIR/issue-63279.rs:5:16
   |
LL | type Closure = impl FnOnce();
   |                ^^^^^^^^^^^^^ expected opaque type, found `()`
   |
   = note: expected opaque type `impl FnOnce<()>`
                found unit type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
